@@ -45,6 +45,9 @@
 	Fixed not being able to pick a symbolic link to a directory via
 	--choose-files or --on-choose by selecting and opening it.
 
+	Fixed 'slowfs' option not being applied to targets of symbolic links on
+	operations related to directory sizes.  Thanks to rok (a.k.a. aca).
+
 0.13-beta to 0.13 (2023-04-04)
 
 	Made "withicase" and "withrcase" affect how files are sorted before
